--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,10 @@ test {
     // see https://github.com/jhipster/generator-jhipster/pull/2771 and https://github.com/jhipster/generator-jhipster/pull/4484
     // ignoreFailures true
     reports.html.enabled = false
+
+    //set Heap size for the test JVM
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
 }
 
 task testReport(type: TestReport) {
